// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Divider 1`] = `
<div
  className="divider"
>
  <div
    className="title"
  >
    <div>
      <h3>
        Test Divider
      </h3>
    </div>
    <div />
  </div>
  <div
    className="section"
  />
</div>
`;

exports[`renders Divider with extra 1`] = `
<div
  className="divider"
>
  <div
    className="title"
  >
    <div>
      <h3>
        Test Divider
      </h3>
    </div>
    <div>
      test extra
    </div>
  </div>
  <div
    className="section"
  />
</div>
`;
